--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioIngenieria.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioIngenieria.cshtml
@@ -379,7 +379,7 @@
             'Avance (mm)', 'Tolerancia avance negativa (mm)', 'Tolerancia avance positiva (mm)',
             'Planicidad (mm)', 'Superficie', 'Tratamiento Superficial', 'Peso del recubrimiento', 'Nombre Molino', 'Forma', 'Núm. cliente', 'Núm. parte del cliente',
             'MSA (Honda)','Diametro Exterior', 'Diametro Interior',
-            'Otro Dato', 'Comentario Adicional', 'Valido'];
+            'Otro Dato', 'Comentario Adicional', 'Valido', 'Cambios'];
 
         var toastMixin = Swal.mixin({
             toast: true,
@@ -858,6 +858,7 @@
                         }
                     },
                     { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
 
 
                 ],
@@ -902,7 +903,7 @@
                 ],
                 hiddenColumns: {
                     // specify columns hidden by default
-                    columns: [0, GetColFromName("Valido")], //contains ID
+                    columns: [0, GetColFromName("Valido"), GetColFromName("Cambios") ], //contains ID
                 },
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
