--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -489,7 +489,7 @@
                                                 {
                                                     <h3>Métricas</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "estatus_solicitudes_mm" ? "current-page" : null )"><a href="@Url.Action("Estatus", "SCDM_solicitud")">Estatus</a></li>
-                                                    <li class="@(ViewBag.SegundoNivel == "materiales_x_solicitud_mm" ? "current-page" : null )"><a href="@Url.Action("MaterialesPorSolicitud", "SCDM_solicitud")">Materiales por solicitud (pendiente)</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "materiales_x_solicitud_mm" ? "current-page" : null )"><a href="@Url.Action("MaterialesPorSolicitud", "SCDM_solicitud")">Materiales por solicitud</a></li>
 
                                                 }
 
