--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
@@ -1604,7 +1604,7 @@
                     switch (tipoMaterial) {
                         case "PLATINA":
                             tipoES = 'PLA';
-                            tipoEN = 'BLA';
+                            tipoEN = 'BLK';
                             break;
                         case "SHEARING":
                             tipoES = 'SHR';
