--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFormatoCompra.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFormatoCompra.cshtml
@@ -404,7 +404,7 @@
         var unidadMedidaArray = @Html.Raw(Json.Encode(unidadMedidaArray));
         var tipoVentaArray = @Html.Raw(Json.Encode(tipoVentaArray));
         var molinosArray = @Html.Raw(Json.Encode(molinosArray));
-        var almacenEntregaArray = ['PU01', 'PU02', 'PU03', 'SI01','SI03','SA01','SA03','CB01','CB03','SL01','SL03'];
+        var almacenEntregaArray = ['PU01', 'PU02', 'PU03', 'SI01','SI03','SA01','SA03','CB01','CB02','CB03','SL01','SL03'];
 
 
         $(document).ready(function () {
